--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>TIANA O'KANE</h1>
     </header>
 
     <main>
         <section id="coming-soon">
             <h2>Coming Soon!</h2>
             <p>I'm working hard to build my portfolio. Check back soon for updates!</p>
+            
+            <!-- Caution Symbol Image -->
+            <img src="assets/caution-symbol.png" alt="Caution: Under Construction" id="caution-sign">
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 Tiana O'Kane</p>
     </footer>
 </body>
 </html>
