Fix: Symbol not displaying correctly

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <p>I'm working hard to build my portfolio. Check back soon for updates!</p>
             
             <!-- Caution Symbol Image -->
-            <img src="assets/caution-symbol.png" alt="Caution: Under Construction" id="caution-sign">
-        </section>
+            <img src="assets/caution-symbol.png" alt="Caution: Under Construction" id="caution-symbol">
+
     </main>
 
     <footer>
