Cleaned up CSS by removing duplicates, optimised font-face rule, and adjusted typography and layout styles

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me | Your Name</title>
+    <title>About Me | Tiana O'Kane</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,13 +13,13 @@
 
     <main>
         <section id="about-content">
-            <p>Hello! I'm Your Name, a software engineer passionate about building innovative solutions.</p>
+            <p>Hello! I'm Tiana O'Kane, an aspiring software engineer passionate about building innovative solutions.</p>
             <p>I'm currently working on several exciting projects. Stay tuned for more!</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 Tiana O'Kane</p>
     </footer>
 </body>
 </html>
