--- a/index.html
+++ b/index.html
@@ -7,10 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- File Explorer Sidebar -->
+    <div id="file-explorer">
+        <ul>
+            <li><a href="#">Pages</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Settings</a></li>
+        </ul>
+    </div>
+
+    <!-- Top Bar -->
     <header>
+        <div class="header-content">
         <h1>TIANA O'KANE</h1>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </nav>
+    </div>
     </header>
 
+       <!-- Main Content Area -->
     <main>
         <section id="coming-soon">
             <h2>Coming Soon!</h2>
