--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
         </ul>
     </div>
 
-    <!-- Top Bar -->
+    <!-- Top Bar with Tabs -->
     <header>
         <div class="header-content">
-        <h1>TIANA O'KANE</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-        </nav>
-    </div>
+            <h1>Tiana O'Kane</h1>
+            <nav>
+                <ul class="tabs">
+                    <li class="tab"><a href="#home">Home</a></li>
+                    <li class="tab"><a href="#about">About</a></li>
+                    <li class="tab"><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-       <!-- Main Content Area -->
+    <!-- Main Content Area -->
     <main>
         <section id="coming-soon">
             <h2>Coming Soon!</h2>
@@ -36,7 +38,7 @@
             
             <!-- Caution Symbol Image -->
             <img src="assets/caution-symbol.png" alt="Caution: Under Construction" id="caution-symbol">
-
+        </section>
     </main>
 
     <footer>
